# tartarus

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
backend/src/clients/: mock_prowlarr.rs  mock_qbittorrent.rs  mod.rs  prowlarr.rs  qbittorrent.rs
backend/src/handlers/: download.rs  mod.rs  search.rs  status.rs
backend/src/indexers/: fake.rs  mod.rs  prowlarr.rs
backend/src/models/: mod.rs  prowlarr.rs  qbittorrent.rs
backend/src/torrent/: fake.rs  mod.rs  qbittorrent.rs
backend/tests/: api_tests.rs
docs/: backend.md  features.md  prowlarr-api.md  qbittorrent-api.md
frontend/: package-lock.json  package.json
tests/: docker-compose.yml  driver.sh  prowlarr-config.xml  qbittorrent.conf  run.sh
